# tiny-dfr

./: Cargo.toml  README.md
etc/: tiny-dfr.conf
etc/systemd/system/: tiny-dfr.service
etc/udev/rules.d/: 99-touchbar-backlight.rules  99-touchbar-tiny-dfr.rules
share/tiny-dfr/tiny-dfr-icons/: index.theme
src/: backlight.rs  main.rs
