[package]
name = "tiny-dfr"
version = "0.1.4"
edition = "2021"
license = "MIT AND Apache-2.0"
description = "The most basic dynamic function row daemon possible"
homepage = "https://github.com/WhatAmISupposedToPutHere/tiny-dfr"
repository = "https://github.com/WhatAmISupposedToPutHere/tiny-dfr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.18", default-features = false }
librsvg = { git = "https://gitlab.gnome.org/WhyHelloThere/librsvg.git", rev = "cb3d568d30207e0512f486a30001effabb80bb04", version = "2.57.0" }
drm = "0.9"
anyhow = "1"
input = "0.8"
libc = "0.2"
input-linux = "0.6"
input-linux-sys = "0.8"
nix = "0.26"
privdrop = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
icon-loader = "0.4"
image = "0.24"
chrono = "0.4"
lazy_static = "1.4"
